<resources>
    <string name="app_name">POCKET RUPIYA PAISA</string>
    <string name="ad_network" translatable="false">admob</string>
    <string name="technical_error" translatable="false">We are facing some technical issue, please try after some time.</string>
    <string name="scratch_count" translatable="false">25</string>
    <string name="daily_check_in_points" translatable="false">20</string>
    <string name="minimum_redeem_points">1000</string>
    <string name="coins_to_currency">1000 Points = 1 INR</string>
    <string name="rewarded_and_interstitial_ads_between_count" translatable="false">2</string>
    <string name="facebook_banner_ads" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="facebook_interstitial_ad_id" translatable="false">VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="facebook_rewarded_video_id" translatable="false">VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="singup_bonus_points" translatable="false">100</string>
    <string name="refer_points" translatable="false">500</string>
    <string name="share_text">Hey You Know About this App. I have earned 100 Rupees from this app, you also want to earn money so click on link below and download it from play store and use My Refer code to get instant bonus My Refer code is </string>
    <string name="privacy_policy_link">https://www.google.com</string>
    <string name="instruction_link">https://www.google.com</string>
    <string name="about_link">https://www.google.com</string>
    <string name="gmail_id">abc@gmail.com</string>
    <string name="you_are_blocked">You Are Blocked due to cheating in this app</string>
    <string name="no_internet_connection">No Internet Connection please check your internet connection.</string>
    <string name="slow_internet_connection">Slow Internet Connection Please Check your Internet Connection</string>
    <string name="you_won">Congratulation You Won</string>
    <string name="add_to_wallet">Add</string>
    <string name="okk">OK</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_mobile">Enter Mobileno</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="didNotSign_up">Sign Up</string>
    <string name="or">------ OR ------</string>
    <string name="redeem_tag_line_1">Are You Sure to want Redeem your points</string>
    <string name="redeem_tag_line_2">your number or paypal id is </string>
    <string name="redeem_tag_line_3">and your redeem points are </string>
    <string name="redeem_tag_line_4">and your redeem method is </string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_number">Enter 6 or more Digit Password</string>
    <string name="today_chance_over">Today\'s Chance is over, try again tomorrow</string>
    <string name="better_luck">Better Luck Next Time</string>
    <string name="login_successfully">Login Successfully…</string>
    <string name="reset">Reset Password</string>
    <string name="forgot_password_title">Enter your register email id we sent a password reset email to you</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_referal_code">Referral Code (optional)</string>
    <string name="have_an_account">Already Have Account ?</string>
    <string name="registration_success">Registration Successfully…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="comunicate">Communicate</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_refer"><![CDATA[Refer & Earn]]></string>
    <string name="logout">Logout</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="faq">Instruction</string>
    <string name="exit_text">Are you sure to Exit?</string>
    <string name="logout_text">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="not_change_email">You can\'t change email</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="title">Send Your Questions and Suggestions here</string>
    <string name="emailtitle">Subject</string>
    <string name="message">Message</string>
    <string name="refer_more">Refer To Earn More</string>
    <string name="refer">Invite</string>
    <string name="resend_otp">Did not get OTP? Resend</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="incomplite_profile">Your Profile is Incomplete please update your Profile</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="login_first">Login First</string>
    <string name="total_availiable_points">Total Available Amount</string>
    <string name="select_method">Select payment method</string>
    <string name="enter_payment_details">Enter Payment Details</string>
    <string name="menu_my_wallet">My Wallet</string>
    <string name="enter_points">Enter Points</string>
    <string name="submit">Submit</string>
    <string name="today_checkin_over">You Already Collect Today Reward, try again tomorrow</string>
    <string name="redeem_successfully">Redeem Successfully</string>
    <string name="daily_checkin">Daily Checkin</string>
    <string name="silver_scratch">Silver Scratch</string>
    <string name="platinum_scratch">Platinum Scratch</string>
    <string name="gold_scratch">Golden Scratch</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap to copy</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="position">Position</string>
    <string name="playerName">Player Name</string>
    <string name="winning">Winning</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_passord">Submit</string>
    <string name="chartboost_appId">63abddfead1c0e6235ff2384</string>
    <string name="chartboost_appSignature">17eafa57e45641a187e843908ae710805ce1a10f</string>
    <string name="key_app_id_selected">appIdSelected</string>
    <string name="key_app_signature_selected">appSignatureSelected</string>
    <string name="error_mobile_number">Invalid Mobile Number</string>
    <string name="error_invalid_amount">Invalid Amount</string>
    <string name="error_internet">No Internet Connection</string>
    <string name="Rupee">\u20B9</string>
    <string name="error_expired_token">Expired token</string>
    <string name="error_session_expired">Session Expired!</string>
    <string name="error_please_login_again">Please Login Again</string>
    <string name="error_attention">Attention!!</string>
    <string name="status">Status</string>
    <string name="txnid">TXNID :</string>
    <string name="dispute">Dispute</string>
    <string name="recid">RECID :</string>
    <string name="operator">Operator</string>
    <string name="recharge_number">Recharge Number </string>
    <string name="rupee_zero">₹ 0.00</string>
    <string name="opening_nbalance">Opening\nBalance</string>
    <string name="commission_nrecieved">Commission\nRecieved</string>
    <string name="closing_nbalance">Closing\nBalance</string>
    <string name="loading">Loading...</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dd_mmm_yy_dd_mmm_yy">dd MMM yy</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="dth_number">DTH Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_operator">Choose Operator</string>
    <string name="recharge">Recharge</string>
    <string name="error_invalid_dth">Invalid DTH Number</string>
    <string name="error_select_operator">Please Select Operator</string>
    <string name="electricity_number">Electricity Consumer Number</string>
    <string name="electricity_bill">Electricity \nBill</string>
    <string name="enter_billing_unit">Enter Billing Unit</string>
    <string name="select_circle">Select Circle</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="select_board">Select Board</string>
    <string name="select_state">Select State</string>
    <string name="land_line_recharge">Land-line Recharge</string>
    <string name="land_line_number">Land-line Number</string>
    <string name="error_invalid_landline">Invalid Landline Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="error_api">Error of API</string>
    <string name="response">Response</string>
    <string name="error_server_error">Oops! Something went wrong!</string>
    <string name="content_type">Content-Type</string>
    <string name="x_api_key">X-API-KEY</string>
    <string name="authorization">Authorization</string>
    <string name="add_money">Add Money</string>
    <string name="phone_pe">Phone Pe</string>
    <string name="google_pay">Google Pay</string>
    <string name="paytm">Paytm</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="transfer_funds_title">Transfer Funds</string>
    <string name="enter_amount_to_transfer">Enter Amount to Transfer</string>
    <string name="id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="privacy_url">https://sites.google.com/view/gradlegames/privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_email">gradlecode@outlook.com</string>
    <string name="share_description">Try this new game</string>
    <string name="image_content">image</string>
    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="txtRetry">Retry</string>
    <string name="id_publisher">pub-3940256099942544</string>
</resources>