<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/ic_bg" />

        <ImageView
            android:id="@+id/back_img_login"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_6sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bg">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="gone"
                        android:id="@+id/email_lyt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_username"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pass_lyt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_lyt"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobile_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_mobile"
                            android:maxLength="10"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_btn"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pass_lyt"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:background="@drawable/btn_bg"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/forgot_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_btn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forgot_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:visibility="gone"
                        android:id="@+id/sign_up_btn"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/or"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:background="@drawable/button_empty_bg"
                        android:text="@string/didNotSign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>